# Example-Crystal-C

./: .gitattributes  LICENSE  README.md  shard.yml
scripts/: build.sh
spec/: crystal-c_spec.cr  spec_helper.cr
src/: crystal-c.cr
src/clib/: .gitignore  .gitrepo  README.md  configure.ac
src/clib/scripts/: build.sh  setup.sh
src/clib/src/: Makefile.am  hello.c
